fix dropdown position and initial overflow

--- a/src/ldbglobe/Tophat/Builder/Css/index.scss
+++ b/src/ldbglobe/Tophat/Builder/Css/index.scss
@@ -7,7 +7,12 @@
 position: relative;
 padding: 0;
 margin: $margin-top 0 $margin-bottom;
-display: flex;
+
+display: none;
+&.init {
+	display: flex;
+}
+
 font-family: $font-family;
 background:$background;
 color:$color;
@@ -26,6 +31,7 @@ font-size: $base-size;
 	margin: 0;
 
 	display: flex;
+
 	flex-wrap: wrap;
 	justify-content: flex-start;
 	align-items: center;
